--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote-theme: pages-themes/minimal@v.0.2.0
+plugins:
+- jekyll-remote-theme
 title: Enrrique's Homepage
 description: Bookmark this to keep an eye on my project updates!
